# aelitium-v3

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FEATURE_MATRIX.md  LICENSE  NOTICE  README.md  SECURITY.md  TEST_MATRIX.md  demo_35s.cast  pyproject.toml
.github/: CODEOWNERS
aelitium/: __init__.py
archive/: SESSION_HANDOFF_2026-03-19.md
audit_results/: 12_strict_audit_report.md
docs/: AAR_EVIDENCE_REF_MAPPING.md  AI_INTEGRITY_DEMO.md  ARCHITECTURE.md  ARCHITECTURE.md.txt  A_B_SYNC_PROTOCOL.md  CANONICALIZATION_SPEC.md  CANONICAL_INDEX.md  CANONICAL_REQUEST.md  DOCS_SYSTEM.md  ENGINE_CONTRACT.md  ENTRYPOINT.md  EVIDENCE_BUNDLE_SPEC.md  EVIDENCE_LOG.md  EVIDENCE_MODEL.md  INDEX.md  INTEGRATION_CAPTURE.md  INTEGRATION_PYTHON.md  MARKET_FEEDBACK.md  MARKET_FEEDBACK_LOG.md  MESSAGING_GUARDRAILS.md  MODEL_BEHAVIOR_CHANGE.md  OFFLINE_VERIFIER.md  ONE_PAGER.md  OPERATOR_GUIDE.md  PHASE3_CLOSURE.md  PHASE4_7DAY_LOOP.md  PHASE4_PLAN.md  PRODUCTS_3_OPTIONS.md  RELEASE_AUDIT_CHECKLIST.md  RELEASE_AUTHORITY_SERVICE.md  RELEASE_CHECKLIST_v0.2.0.md  RELEASE_PROCESS.md  REPRO_CHECKLIST.md  SECURITY_MODEL.md  SESSION_END_2026-03-04.md  SESSION_STATE.md  SYSTEM_MAP.md  TEST_MATRIX.md  TRUST_BOUNDARY.md  TRUST_MODEL.md  (+1 more)
engine/: __init__.py  ai_canonical.py  ai_cli.py  ai_pack.py  canonical.py  capture_openai.py  cli.py  compliance.py  pack.py  repro.py  signing.py  verify.py
examples/: aar_evidence_ref_receipt.json  ai_output_min.json  capture_openai.py  litellm_enable.py  model_drift_detector.py
governance/: EVIDENCE_LOG.md  MARKET_FEEDBACK_LOG.md  PHASE3_CLOSURE.md  TEST_MATRIX.md
inputs/: minimal_input_v1.json
scripts/: ael_env.sh  aelitium_verify_standalone.py  apply_bundle_b.sh  audit_release.sh  authority_status.sh  bundle_determinism_check.sh  gate_release.sh  generate_badge.sh  generate_status.sh  guardrail_public_claims.sh  make_bundle_a.sh  make_release_zip.sh  offline_verify.sh  open_landing.sh  phase4_bootstrap.sh  prepare_evidence_a.sh  release_rc.sh  run_test_matrix.sh  selftest_authority_status.sh  selftest_gate_evidence.sh  selftest_gate_signing.sh  selftest_sign_tag_b.sh  sign_tag_b.sh  test_cli_install.sh  test_determinism.sh  test_full_release_flow.sh  test_receipt.sh  test_release_zip_determinism.sh  test_tamper.sh  test_tamper_ai.sh  use_test_signing_key.sh  validate_evidence_log.py  validate_machine_b.sh  verify_release_zip.sh  verify_repro.sh
tests/: test_ai_cli.py  test_ai_cli_canonicalize.py  test_ai_cli_compare.py  test_ai_cli_help.py  test_ai_cli_pack.py  test_ai_cli_pack_contract.py  test_ai_cli_scan.py  test_ai_cli_validate.py  test_ai_cli_validate_contract.py  test_ai_cli_verify_bundle.py  test_ai_cli_verify_contract.py  test_ai_cli_verify_receipt_contract.py  test_ai_output_jsonschema.py  test_ai_output_schema.py  test_ai_pack_pure.py  test_bundle_contract.py  test_capture_anthropic.py  test_capture_litellm.py  test_capture_openai.py  test_capture_openai_adapter.py  test_compliance.py  test_enable_litellm.py  test_evidence_log.py  (+5 more)
(+43 files in other folders)
