[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aelitium"
version = "0.2.0"
description = "Deterministic evidence bundle engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["cryptography>=41", "jsonschema>=4.18"]

[project.scripts]
aelitium-ai = "engine.ai_cli:main"
aelitium = "engine.cli:main"

[tool.setuptools]
packages = ["engine"]
include-package-data = true

[tool.setuptools.package-data]
engine = ["schemas/*.json"]
