[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aelitium"
version = "0.2.2"
description = "Tamper-evident evidence bundles for AI outputs"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "cryptography>=41",
  "jsonschema>=4.18",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.25"]
all = ["openai>=1.0", "anthropic>=0.25"]

[project.urls]
Homepage = "https://github.com/aelitium-dev/aelitium-v3"
Documentation = "https://github.com/aelitium-dev/aelitium-v3/tree/main/docs"
Issues = "https://github.com/aelitium-dev/aelitium-v3/issues"

[project.scripts]
aelitium = "engine.ai_cli:main"

[tool.setuptools]
packages = ["engine", "engine.capture", "aelitium"]
include-package-data = true

[tool.setuptools.package-data]
engine = ["schemas/*.json"]
